[gd_scene load_steps=29 format=3 uid="uid://4su3d00erb0k"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_0wmhh"]
[ext_resource type="Texture2D" uid="uid://cgcq35jmbrh4" path="res://assets/sprites/circle.png" id="1_jrsdj"]
[ext_resource type="PackedScene" uid="uid://co3nfgr6pq3ga" path="res://objects/house.tscn" id="2_es5xx"]
[ext_resource type="PackedScene" uid="uid://b7055nlbpufhw" path="res://objects/character.tscn" id="2_riojm"]
[ext_resource type="PackedScene" uid="uid://caq62ugtyx76r" path="res://objects/big_house.tscn" id="3_sv75s"]
[ext_resource type="PackedScene" uid="uid://bgepofsrw6blq" path="res://objects/bigger_house.tscn" id="4_1sbbi"]
[ext_resource type="PackedScene" uid="uid://bxwxahda2kpih" path="res://objects/enemy.tscn" id="4_dlig4"]
[ext_resource type="Script" path="res://scripts/upgrade.gd" id="5_kqrhn"]
[ext_resource type="Texture2D" uid="uid://dbjw7krf01fow" path="res://assets/sprites/upgrade_placeholder.png" id="6_h3cn5"]
[ext_resource type="PackedScene" uid="uid://l07pua8b6vte" path="res://objects/upgrade_button.tscn" id="7_dgolm"]
[ext_resource type="Script" path="res://scripts/repeatable_upgrade.gd" id="9_7qq88"]
[ext_resource type="PackedScene" uid="uid://dw3e2fl4rn5am" path="res://objects/rainbow_line.tscn" id="11_lm4cc"]
[ext_resource type="PackedScene" uid="uid://d1mp57ku7y5e" path="res://objects/repeatable_upgrade_button.tscn" id="12_784fy"]

[sub_resource type="Resource" id="Resource_6n4n3"]
script = ExtResource("5_kqrhn")
id = &"LOAD_SHOT"
name = "Strong Present"
icon = ExtResource("6_h3cn5")
description = "[NOT IMPLEMENTED] Hold the mouse button to load a stronger shot, sending the present faster and gaining more speed"

[sub_resource type="Resource" id="Resource_812a1"]
script = ExtResource("5_kqrhn")
id = &"FRAG"
name = "Fragmentation Present"
icon = ExtResource("6_h3cn5")
description = "Presents will create more presents when hitting the ground"

[sub_resource type="Resource" id="Resource_306lq"]
script = ExtResource("5_kqrhn")
id = &"DASH"
name = "Sugar Burst"
icon = ExtResource("6_h3cn5")
description = "Allows you to dash forward by pressing the spacebar"

[sub_resource type="Resource" id="Resource_bt1gb"]
script = ExtResource("5_kqrhn")
id = &"FAST_PRESENTS"
name = "Weighted Presents"
icon = ExtResource("6_h3cn5")
description = "Add some weight into your presents to make them reach the ground faster"

[sub_resource type="Resource" id="Resource_t402t"]
script = ExtResource("5_kqrhn")
id = &"SPEED_HIGH"
name = "Stellar Fuel"
icon = ExtResource("6_h3cn5")
description = "Greatly increases speed in high orbit"

[sub_resource type="Resource" id="Resource_fe4ix"]
script = ExtResource("5_kqrhn")
id = &"SPEED_LOW"
name = "Stylish Moves"
icon = ExtResource("6_h3cn5")
description = "Greatly increases speed in low orbit"

[sub_resource type="Resource" id="Resource_yuq2w"]
script = ExtResource("5_kqrhn")
id = &"PARRY"
name = "Last-Minute Present"
icon = ExtResource("6_h3cn5")
description = "Throw a present at the very last moment to  make an entire building happy"

[sub_resource type="Resource" id="Resource_42057"]
script = ExtResource("5_kqrhn")
id = &"RAINBOW"
name = "Rainbow Cane"
icon = ExtResource("6_h3cn5")
description = "The Candy Cane now shoots rainbows"

[sub_resource type="Resource" id="Resource_7pejh"]
script = ExtResource("5_kqrhn")
id = &"OMNI_SHOT"
name = "Omnidirectional Presents"
icon = ExtResource("6_h3cn5")
description = "[NOT IMPLEMENTED] Allows you to shoot presents in any direction with the mouse"

[sub_resource type="Resource" id="Resource_wdxe3"]
script = ExtResource("9_7qq88")
id = &"MORE_PRESENTS"
name = "Hold 1 more present"
icon = ExtResource("6_h3cn5")

[sub_resource type="Resource" id="Resource_y1h6y"]
script = ExtResource("9_7qq88")
id = &"MORE_HP"
name = "Add 1 Max HP, heal 1 HP"
icon = ExtResource("6_h3cn5")

[sub_resource type="Resource" id="Resource_pyael"]
script = ExtResource("9_7qq88")
id = &"MORE_LOAD"
name = "Load new presents 10% faster"

[sub_resource type="Resource" id="Resource_bpf33"]
script = ExtResource("9_7qq88")
id = &"MORE_SPEED"
name = "Increase speed by 10%"
icon = ExtResource("6_h3cn5")

[sub_resource type="Resource" id="Resource_7smhc"]
script = ExtResource("9_7qq88")
id = &"MORE_TIME"
name = "Rollback time by 20 seconds"
icon = ExtResource("6_h3cn5")

[sub_resource type="CircleShape2D" id="CircleShape2D_jundk"]
radius = 639.003

[node name="Main" type="Node2D"]
texture_filter = 1
script = ExtResource("1_0wmhh")
speed_low = 0.45
position_bounds = Vector2(0, 225)
house_spawn_timing = Vector2(0.2, 0.8)
satellite_spawn_timing = Vector2(0.4, 2)
initial_time = 60.0
dash_speed = 1.0
dash_falloff = 0.3
buildings = Array[PackedScene]([ExtResource("2_es5xx"), ExtResource("3_sv75s"), ExtResource("4_1sbbi")])
satellites = Array[PackedScene]([ExtResource("4_dlig4")])
upgrades = Array[ExtResource("5_kqrhn")]([SubResource("Resource_6n4n3"), SubResource("Resource_812a1"), SubResource("Resource_306lq"), SubResource("Resource_bt1gb"), SubResource("Resource_t402t"), SubResource("Resource_fe4ix"), SubResource("Resource_yuq2w"), SubResource("Resource_42057"), SubResource("Resource_7pejh")])
upgrade_button_scene = ExtResource("7_dgolm")
repeatable_upgrades = Array[ExtResource("9_7qq88")]([SubResource("Resource_wdxe3"), SubResource("Resource_y1h6y"), SubResource("Resource_pyael"), SubResource("Resource_bpf33"), SubResource("Resource_7smhc")])
repeatable_upgrade_button_scene = ExtResource("12_784fy")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(507, 180)

[node name="Earth" type="Area2D" parent="."]
unique_name_in_owner = true
position = Vector2(320, 896)

[node name="RainbowLine" parent="Earth" instance=ExtResource("11_lm4cc")]
unique_name_in_owner = true
visible = false

[node name="EarthSprite" type="Sprite2D" parent="Earth"]
scale = Vector2(5, 5)
texture = ExtResource("1_jrsdj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Earth"]
shape = SubResource("CircleShape2D_jundk")

[node name="Character" parent="." groups=["Character"] instance=ExtResource("2_riojm")]
unique_name_in_owner = true
position = Vector2(320, 70)
scale = Vector2(1.5, 1.5)
mass = 70.0
upwards_impulse = 70.0
downwards_impulse = 40.0
present_launch_speed = 200.0

[node name="HouseSpawnPosition" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(822, 474)
rotation = 0.790014

[node name="SatelliteSpawnLow" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(907.135, 392.135)
rotation = 0.753982

[node name="SatelliteSpawnHigh" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(1029, 279)
rotation = 0.753982

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxTopLeft" type="VBoxContainer" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 40.0

[node name="ScoreLabel" type="Label" parent="CanvasLayer/VBoxTopLeft"]
unique_name_in_owner = true
layout_mode = 2
text = "Happy Kids: 0"

[node name="HPLabel" type="Label" parent="CanvasLayer/VBoxTopLeft"]
unique_name_in_owner = true
layout_mode = 2
text = "HP: 3"

[node name="AmmoLabel" type="Label" parent="CanvasLayer/VBoxTopLeft"]
unique_name_in_owner = true
layout_mode = 2
text = "Presents: 5 (0%)"

[node name="DashLabel" type="Label" parent="CanvasLayer/VBoxTopLeft"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Dash: READY"

[node name="VBoxTopRight" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="TimeLabel" type="Label" parent="CanvasLayer/VBoxTopRight"]
unique_name_in_owner = true
layout_mode = 2
text = "120"
horizontal_alignment = 2

[node name="CanvasLayerUpgrades" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayerUpgrades"]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayerUpgrades/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="UpgradeButtonsContainer" type="HBoxContainer" parent="CanvasLayerUpgrades/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
size_flags_vertical = 4
alignment = 1

[node name="RepeatableUpgradeButtonsContainer" type="HBoxContainer" parent="CanvasLayerUpgrades/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
size_flags_vertical = 4
alignment = 1

[node name="CanvasLayerGameOver" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayerGameOver"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LabelLose" type="Label" parent="CanvasLayerGameOver/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 64
text = "Game Over!!!!!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayerGameOver/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="ButtonRetry" type="Button" parent="CanvasLayerGameOver/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Retry"

[node name="CanvasLayerEnd" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayerEnd"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LabelEnd" type="Label" parent="CanvasLayerEnd/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 64
text = "End of the night"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelEndPresents" type="Label" parent="CanvasLayerEnd/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Presents offered: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayerEnd/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 80

[node name="ButtonRetry" type="Button" parent="CanvasLayerEnd/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Retry"

[connection signal="exited_screen" from="Character" to="." method="_on_character_exited_screen"]
[connection signal="hit" from="Character" to="." method="_on_character_hit"]
[connection signal="hit_ground" from="Character" to="." method="_on_character_hit_ground"]
[connection signal="pressed" from="CanvasLayerGameOver/VBoxContainer/MarginContainer/ButtonRetry" to="." method="_on_button_retry_pressed"]
[connection signal="pressed" from="CanvasLayerEnd/VBoxContainer/MarginContainer/ButtonRetry" to="." method="_on_button_retry_pressed"]
